--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-jest": "^29.7.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-import": "^2.31.0",
+    "globals": "^15.14.0",
     "jest": "^29.7.0"
   },
   "scripts": {
